sanger/sites/schistosomula-cell-atlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schistosomula-cell-atlas
  labels:
    app: schistosomula-cell-atlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: schistosomula-cell-atlas
---
apiVersion: v1
kind: Service
metadata:
  name: schistosomula-cell-atlas-cxg
  labels:
    app: schistosomula-cell-atlas-cxg
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: schistosomula-cell-atlas-cxg
---
